# ClashX

./: .gitignore  AGENTS.md  DEMO_SCRIPT.md  DEPLOYMENT.md  Procfile  README.md  hackathondetails.md  pacifica.yaml  package-lock.json  package.json  random_dates.py  requirements.txt  schema.sql  vercel.json
services/trading-backend/: .ruff.toml  README.md  alembic.ini  pyproject.toml
services/trading-backend/db/: current_schema.sql  schema.sql  supabase_bot_tables.sql
services/trading-backend/db/migrations/: README.md  env.py
services/trading-backend/scripts/: live_pacifica_trade_smoke.py
services/trading-backend/src/: main.py  worker.py
services/trading-backend/src/api/: admin.py  auth.py  backtests.py  bot_copy.py  bots.py  builder.py  copilot.py  copy.py  leagues.py  marketplace.py  pacifica.py  portfolios.py  stream.py  telegram.py  trading.py
services/trading-backend/src/clashx_trading_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/trading-backend/tests/: conftest.py  test_action_translation_matrix.py  test_ai_job_runner_service.py  test_auth_middleware.py  test_backtest_job_worker.py  test_backtests_api.py  test_bot_backtest_service.py  test_bot_copy_api.py  test_bot_copy_dashboard_service.py  test_bot_copy_worker.py  test_bot_performance_service.py  test_bot_risk_service.py  test_bot_runtime_sizing.py  test_bot_runtime_supabase.py  test_bot_runtime_worker_notifications.py  test_bot_trust_service.py  test_bots_api_fast_mode.py  test_builder_ai_service.py  test_builder_graph_services.py  test_builder_jobs_api.py  test_copilot_api.py  test_copilot_conversation_service.py  test_copilot_service.py  test_creator_marketplace_service.py  test_main_startup.py  test_pacifica_api.py  test_pacifica_client.py  test_pacifica_live_smoke.py  test_pacifica_rate_limiter.py  test_pacifica_readiness_service.py  test_pacifica_trade_lifecycle.py  test_portfolio_allocator_service.py  test_portfolios_api.py  test_rules_engine_graph.py  test_runtime_harness_scenarios.py  test_settings.py  test_supabase_rest.py  test_telegram_service.py  test_worker_coordination_service.py
(+255 files in other folders)
